RESOLVED FIXED139739
[iOS] Define button and action should respect profile settings.
https://bugs.webkit.org/show_bug.cgi?id=139739
Summary [iOS] Define button and action should respect profile settings.
Enrica Casucci
Reported 2014-12-17 12:11:28 PST
The define button and action should only be available if not explicitly disabled via profile.
Attachments
Patch (2.54 KB, patch)
2014-12-17 12:16 PST, Enrica Casucci
joepeck: review+
Enrica Casucci
Comment 1 2014-12-17 12:15:10 PST
Enrica Casucci
Comment 2 2014-12-17 12:16:53 PST
WebKit Commit Bot
Comment 3 2014-12-17 12:18:50 PST
Attachment 243449 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:51: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1342: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 4 2014-12-17 13:46:56 PST
Comment on attachment 243449 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=243449&action=review r=me > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:52 > +#import <ManagedConfiguration/MCProfileConnection.h> > +#import <ManagedConfiguration/MCFeatures.h> Nit: `sort` which you already noticed. Are these SPI? In order for this to build with the public SDK do you have to do something special? dbates has been doing something like that, so there may be something you have to do here, or maybe not.
Enrica Casucci
Comment 5 2014-12-17 13:56:04 PST
Committed revision 177463.
Note You need to log in before you can comment on or make changes to this bug.