[iOS] Define button and action should respect profile settings. https://bugs.webkit.org/show_bug.cgi?id=139739 rdar://problem/15461887

Reviewed by Joseph Pecoraro.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView canPerformAction:withSender:]):
(-[WKContentView _define:]):



Canonical link: https://commits.webkit.org/157652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177463 268f45cc-cd09-0410-ab3c-d52691b4dbfc